[package]
name = "signalizer"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

[dependencies]
actix-web = "0.7.14"
actix = "0.7.6"
actix-broker = "0.1.6"
log = "0.4.6"
env_logger = "0.6.0"
build_timestamp = "0.1.0"
serde_json = "1.0.33"
serde_derive = "1.0.80"
serde = "1.0.80"
rand = "0.6.0"
