[package]
name = "signaler-protocol"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
log = "0.4"

[dependencies.typescript-definitions]
git = "https://github.com/onelson/typescript-definitions"
branch = "no-debug-attrs"


[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[lib]
crate-type = ["cdylib", "rlib"]
