[package]
name = "server-warp"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { git = "https://github.com/seanmonstar/warp/"}
log = "0.4"
env_logger = "0.7"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
tokio = { version = "0.2.0-alpha.6" }
color-backtrace = "0.3.0"
futures-util = "0.3.1"
futures-sink = "0.3.1"
