[package]
name = "signaler"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2021"

[dependencies]

actix-files = "=0.6.0-beta.7"
actix-http = "=3.0.0-beta.10"
actix = "0.12"
actix-rt = "2.2.0"
actix-service = "2.0.0"
actix-web-actors = "=4.0.0-beta.7"
actix-web = "=4.0.0-beta.9"

log = "0.4"
env_logger = "0.7"
build_timestamp = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
dotenv = "0.15"
config = "0.11"

chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
color-backtrace = "0.5.0"

signaler-protocol = { path = "../protocol" }


[[bin]]
name = "server"
path = "./src/main.rs"
