[package]
name = "signaler"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2018"

[dependencies]

actix-files = "0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix = "0.11.1"
actix-rt = "2.2.0"
actix-service = "=2.0.0-beta.5"
actix-web-actors = "=4.0.0-beta.4"
actix-web = "=4.0.0-beta.5"

log = "0.4"
env_logger = "0.7"
build_timestamp = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
dotenv = "0.15"
config = "0.11"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
color-backtrace = "0.4"

signaler-protocol = { path = "../protocol" }
