[package]
name = "server"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
hannibal = "0.8"
signaler-protocol = { path = "../protocol" }
chrono = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
config = "0.12"

color-backtrace = "0.5"
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"

warp-prometheus = "0.5"
prometheus = "0.13"
console-subscriber = "0.1"

[dependencies.async-std]
version = "1"
features = ["tokio1"]

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.17"
features = ["full"]


[[bin]]
name = "server"
path = "./src/main.rs"
