[package]
name = "server2"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
xactor = "0.7"

log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
config = "0.11"

color-backtrace = "0.5"
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"

signaler-protocol = { path = "../protocol" }
[dependencies.async-std]
version = "1.10.0"
features = ["tokio1"]

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.0"


[[bin]]
name = "server2"
path = "./src/main.rs"
